--- a/my-app/src/app/components/userInfoComponent/userInfo.component.html
+++ b/my-app/src/app/components/userInfoComponent/userInfo.component.html
@@ -2,4 +2,7 @@
   <h6>第二個組件 user-info-component</h6> 
   rootColor: {{ rootColor }}
   <button (click)="lookRootColor()">觀看RootColor</button>
+
+  <p>params: {{ params }}</p>
+  <pre>queryString: {{ queryString | json }}</pre>
 </div>
