--- a/my-app/src/app/components/userInfoComponent/userInfo.component.scss
+++ b/my-app/src/app/components/userInfoComponent/userInfo.component.scss
@@ -2,4 +2,24 @@
   padding: 20px;
   border: 2px solid pink;
   margin: 10px 0;
+
+  .cart-box {
+    h6 {
+      margin: 0 0 10px 0;
+      padding: 5px 0;
+      border-bottom: 1px solid #ccc;
+    }
+    span {
+      display: inline-block;
+      margin: 3px 6px;
+      padding: 3px 15px;
+      border: 1px solid #7c7c7c;
+      border-radius: 10px;
+      i {
+        cursor: pointer;
+        color: #325dbb;
+        font-size: 13px;
+      }
+    }
+  }
 }
