--- a/my-app/src/app/containers/appComponent/app.component.html
+++ b/my-app/src/app/containers/appComponent/app.component.html
@@ -5,5 +5,6 @@
   <a [routerLink]="['/index']">index</a>
   <a [routerLink]="['/userInfo', '123']">userInfo (params)</a>
   <a [routerLink]="['/userInfo', '456']" [queryParams]="{a:'aaa', b:'bbb'}">userInfo (params + queryString)</a>
+  <a [routerLink]="['/contactUs']">聯絡我們</a>
 </div>
 <router-outlet></router-outlet>
