--- a/my-app/src/app/components/testSlotComponent/testSlot.component.html
+++ b/my-app/src/app/components/testSlotComponent/testSlot.component.html
@@ -1,5 +1,6 @@
 <div class="test-slot-component">
   <h6>組件 test-slot-component</h6>
+  <pre>{{ useDataModel | json }}</pre>
 
   <!-- 類似 vue 的 slot 但是比 slot 遜很多 -->
   <!-- 一般用法 -->
@@ -10,5 +11,5 @@
   <ng-content select="p"></ng-content>
   <!-- 使用 html attibute -->
   <ng-content select="[test2]"></ng-content>
-
+  
 </div>
