--- a/learn02/src/app/modules/contactus/contactus.component.html
+++ b/learn02/src/app/modules/contactus/contactus.component.html
@@ -2,4 +2,11 @@
   <app-unit-menu></app-unit-menu>
   <h1>聯絡我們</h1>
 
+
+  <br><br><br><br><br>
+  <h6>以下為研究表單的用法</h6>
+  <hr>
+  <app-user-name-input-component></app-user-name-input-component>
+  <hr>
+  <app-user-phone-input-component></app-user-phone-input-component>
 </div>
