--- a/learn02/src/app/modules/contactus/contactus.component.html
+++ b/learn02/src/app/modules/contactus/contactus.component.html
@@ -1,7 +1,34 @@
 <div class="contactus-views">
   <app-unit-menu></app-unit-menu>
   <h1>聯絡我們</h1>
+  <!-- 這邊使用的是"範本驅動表"的方式 -->
+  <form class="contact-form" #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+    <label>
+      中文姓名<span class="require-asterisk">*</span>
+      <span class="label-error" *ngIf="userName.invalid && (userName.dirty || userName.touched)">
+        <i *ngIf="userName.errors.required">必填</i>
+      </span>
+      <input type="text" name="userName" #userName="ngModel" maxlength="20" ngModel required
+        placeholder="限定20個字元"
+        [(ngModel)]="formModel.userName">
+    </label>
+    <label>
+      手機號碼<span class="require-asterisk">*</span>
+      <span class="label-error" *ngIf="userPhone.invalid && (userPhone.dirty || userPhone.touched)">
+        <i *ngIf="userPhone.errors.required">必填</i>
+      </span>
+      <input type="tel" name="userPhone" #userPhone="ngModel" ngModel required
+        appPhoneValidate
+        placeholder="限定台灣手機格式"
+        [(ngModel)]="formModel.userPhone">
+      <div *ngIf="userPhone.invalid && (userPhone.dirty || userPhone.touched) &&
+        userPhone.errors.phoneValidate"
+        style="color: red;">手機格式錯誤.</div>
 
+    </label>
+    <button class="btn-light" type="button" (click)="f.reset()">重設表單</button>
+    <button type="submit" [disabled]="!f.valid">送出</button>
+  </form>
 
   <br><br><br><br><br>
   <h6>以下為研究表單的用法</h6>
