--- a/learn02/src/styles.scss
+++ b/learn02/src/styles.scss
@@ -1,6 +1,70 @@
+@import "./variables.scss";
+
 /* You can add global styles to this file, and also import other style files */
 body {
   padding: 0;
   margin: 0;
   background-color: rgb(192, 194, 185);
+  color: $baseWord;
+}
+
+a {
+  color: $blue;
+}
+
+// 必填*號
+.require-asterisk {
+  color: $red;
+  font-size: 12px;
+}
+
+// 表單欄位錯誤出現的文字
+.label-error {
+  color: $red;
+  font-size: 14px;
+  display: inline-block;
+  margin: 0 5px;
+}
+
+// 一般輸入欄位
+input[type="text"], input[type="email"], input[type="tel"], input[type="password"] {
+  padding: 10px;
+  border-radius: 3px;
+  border: 1px solid $grey2;
+  box-sizing: border-box;
+
+  &:focus {
+    border: 1px solid darken($grey2, 30);
+    outline: none;
+  }
+}
+
+// 按鈕 (預設藍底白字)
+input[type="button"], input[type="submit"], button {
+  padding: 10px 20px;
+  margin: .25rem .25rem .25rem 0;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  box-sizing: border-box;
+  background-color: $blue;
+  color: #fff;
+  cursor: pointer;
+
+  &:focus {
+    border: 1px solid darken($blue, 30);
+    outline: none;
+  }
+
+  &:disabled {
+    background-color: $grey;
+    color: darken($grey, 15);
+    cursor: default;
+  }
+
+  // 按鈕: 白色樣式
+  &.btn-light {
+    background-color: #fff;
+    border: 1px solid $grey;
+    color: $baseWord;
+  }
 }
